refactor: 내가 작성한 공유 질문이 공유된 횟수 추가